# timesheet

./: README.md  example-timesheet.txt  timesheet.cabal
src/: Main.hs
